# lib/db/src/schema/characters.ts
@@ -10,7 +10,8 @@ export const charactersTable = pgTable("characters", {
   level: integer("level").notNull().default(1),
   maxHp: integer("max_hp").notNull(),
   currentHp: integer("current_hp").notNull(),
-  armorClass: integer("armor_class").notNull().default(10),
+  dtBonus: integer("dt_bonus").notNull().default(0),
+  currentDt: integer("current_dt").notNull().default(10),
   speed: integer("speed").notNull().default(30),
   power: integer("power").notNull().default(10),
   vitality: integer("vitality").notNull().default(10),
